--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -7,14 +7,14 @@
     </h1>
     <%# 購入内容の表示 %>
     <div class='buy-item-info'>
-      <%= image_tag "item-sample.png", class: 'buy-item-img' %>
+      <%= image_tag @item.image, class: 'buy-item-img' %>
       <div class='buy-item-right-content'>
         <h2 class='buy-item-text'>
-          <%= @credit.item.title %>
+          <%= @item.title %>
         </h2>
         <div class='buy-item-price'>
-          <p class='item-price-text'>¥<%= @credit.item.selling_price %></p>
-          <p class='item-price-sub-text'><%= @credit.item.load.name %></p>
+          <p class='item-price-text'>¥<%= @item.selling_price %></p>
+          <p class='item-price-sub-text'><%= @item.load.name %></p>
         </div>
       </div>
     </div>
@@ -26,7 +26,7 @@
         支払金額
       </h1>
       <p class='item-payment-price'>
-        ¥<%= @credit.item.selling_price %>
+        ¥<%= @item.selling_price %>
       </p>
     </div>
     <%# /支払額の表示 %>
