--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -23,15 +23,13 @@
       </span>
     </div>
 
-    <% if @item.user == current_user %>
+    <% if @item.user == current_user && !@item.order.present? %>
       <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
         <p class="or-text">or</p>
       <%= link_to "削除", "/items/#{@item.id}", method: :delete, class:"item-destroy" %>
-    <%# 商品が売れていない場合はこちらを表示しましょう %>
-    <% elsif user_signed_in? %>
+    <% elsif user_signed_in? && !@item.order.present? %>
       <%= link_to "購入画面に進む", item_orders_path(@item.id), class:"item-red-btn"%>
     <% end %>
-    <%# //商品が売れていない場合はこちらを表示しましょう %>
     
     <div class="item-explain-box">
       <span><%= "商品説明" %></span>
