--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -23,14 +23,15 @@
       </span>
     </div>
 
-    <% if @item.user == current_user && !@item.order.present? %>
-      <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
-        <p class="or-text">or</p>
-      <%= link_to "削除", "/items/#{@item.id}", method: :delete, class:"item-destroy" %>
-    <% elsif user_signed_in? && !@item.order.present? %>
-      <%= link_to "購入画面に進む", item_orders_path(@item.id), class:"item-red-btn"%>
+    <% if user_signed_in? && !@item.order.present? %>
+      <% if @item.user == current_user %>
+        <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
+          <p class="or-text">or</p>
+        <%= link_to "削除", "/items/#{@item.id}", method: :delete, class:"item-destroy" %>
+      <% else %>
+        <%= link_to "購入画面に進む", item_orders_path(@item.id), class:"item-red-btn"%>
+      <% end %>
     <% end %>
-    
     <div class="item-explain-box">
       <span><%= "商品説明" %></span>
     </div>
