コメント機能の実装

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -77,19 +77,37 @@
   <%# /商品の概要 %>
 
   <div class="comment-box">
-    <form>
-      <textarea class="comment-text"></textarea>
+    <% if user_signed_in? %>
+      <%= form_with(model: [@item, @comment], local: true) do |f| %>
+        <%= f.text_area :text, class:"comment-text" %>
+          <div>
+            <p class="comment-warn">
+              相手のことを考え丁寧なコメントを心がけましょう。
+              <br>
+              不快な言葉遣いなどは利用制限や退会処分となることがあります。
+            </p>
+          </div>
+        <%= f.submit 'コメントする' %>
+          
+      <% end %>
+      <% if @item.comments.present? %>
+        <div class="comment-index">
+          <h4>＜コメント一覧＞</h4>
+          <% @comments.each do |comment| %>
+            <p>
+              <strong><%= link_to comment.user.nickname, "/users/#{comment.user_id}" %>：</strong>
+              <%= comment.text %>
+            </p>
+          <% end %>
+        </div>
+      <% end %>
+    <% else %>
       <p class="comment-warn">
-        相手のことを考え丁寧なコメントを心がけましょう。
-        <br>
-        不快な言葉遣いなどは利用制限や退会処分となることがあります。
+        コメントする際にはログインしてください。
       </p>
-      <button type="submit" class="comment-btn">
-        <%= image_tag "comment.png" ,class:"comment-flag-icon" ,width:"20",height:"25"%>
-        <span>コメントする<span>
-      </button>
-    </form>
+    <% end %>
   </div>
+    
   <div class="links">
     <a href="#" class="change-item-btn">
       ＜ 前の商品
